# plotstyle

./: LICENSE  Makefile  README.md  RELEASE_PROCESS.md  demo.ipynb  pyproject.toml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/workflows/: main.yml  pr_checks.yml
docs/source/: conf.py  index.md  installation.md
plotstyle/: __init__.py  colors.py  constants.py  export.py  patch.py  size.py  typesetting.py
plotstyle/data/styles/: README.md  powerpoint.mplstyle
plotstyle/data/styles/color/: cambridge-core.mplstyle  cambridge-light.mplstyle
plotstyle/data/styles/journals/: nature.mplstyle
plotstyle/data/styles/tex/: latex-sans.mplstyle  pdflatex.mplstyle
scripts/: prepare_changelog.py  release.sh
