[project]
# See https://setuptools.pypa.io/en/latest/userguide/quickstart.html for more project configuration options.
name = "plotstyle"
dynamic = ["version"]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [
    {name = "Simon Mathis", email = "simon.mathis@cl.cam.ac.uk"}
]
requires-python = ">=3.8"
dependencies = [
  # Add your own dependencies here
  "matplotlib>=3.4.2",
  "numpy>=1.21.1",
  "pandas>=1.3.1",
  "scipy>=1.7.1",
  "seaborn>=0.11.1",
  "colorcet>=2.0.6",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/Croydon-Brixton/plotstyle"
Repository = "https://github.com/Croydon-Brixton/plotstyle"
Changelog = "https://github.com/Croydon-Brixton/plotstyle/blob/main/CHANGELOG.md"
# Documentation = "https://plotstyle.readthedocs.io/"

[project.optional-dependencies]
dev = [
    "ruff==0.4.8",
    "mypy>=1.0,<1.5",
    "pytest",
    "pytest-sphinx",
    "pytest-cov",
    "twine>=1.11.0",
    "Sphinx>=4.3.0,<7.1.0",
    "furo==2023.7.26",
    "myst-parser>=1.0,<2.1",
    "sphinx-copybutton==0.5.2",
    "sphinx-autobuild==2021.3.14",
    "sphinx-autodoc-typehints==1.23.3",
    "packaging"
]
extra = [
    "adjustText>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["plotstyle"]
include = ["plotstyle/data", "plotstyle/py.typed"]

[tool.hatch.version]
path = "plotstyle/__about__.py"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = "tests/"
python_classes = [
  "Test*",
  "*Test"
]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
